# multi_class_fishers

./: README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/multi_class_fishers/: __init__.py  multi_class_fishers.py
tests/: test_multiclass_fishers.py
