[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_class_fishers"
version = "0.0.1"
authors = [
  { name="Matthew Corney", email="matthew_corney@yahoo.co.uk" },
]
description = "Python implementation of fishers exact test for non 2x2 contingecy tables"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MatthewCorney/multi_class_fishers"
"Bug Tracker" = "https://github.com/MatthewCorney/multi_class_fishers"