[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multi_class_fishers"
version = "0.0.1"
authors = [
  { name = "Matthew Corney", email = "matthew_corney@yahoo.co.uk" }
]
description = "Python implementation of Fisher's exact test for non 2x2 contingency tables"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.19.2",
    "scipy>=1.5.2",
   "python-constraint>=1.3",
  "pytest>=6.1",
  "pytest-runner>=4.1"
]

[project.urls]
Homepage = "https://github.com/MatthewCorney/multi_class_fishers"
Bug-Tracker = "https://github.com/MatthewCorney/multi_class_fishers/issues"