[tool.poetry]
name = "multi_class_fishers"
version = "0.0.1"
description = "Python implementation of Fisher's exact test for non 2x2 contingency tables"
authors = ["Matthew Corney <matthew_corney@yahoo.co.uk>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/MatthewCorney/multi_class_fishers"
repository = "https://github.com/MatthewCorney/multi_class_fishers"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "multi_class_fishers", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.21.0"
scipy = ">=1.7.0"
python-constraint = ">=1.4"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
ruff = ">=0.1.0"
mypy = ">=1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]
exclude = ["build", "dist", ".venv", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
